k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudbees
  labels:
    name: cloudbees
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    name: external-secrets
---
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  labels:
    name: velero
